added support for downloading and uploading files from single sftp source

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+
+sftp.host=192.168.27.129
+sftp.port=22
+sftp.username=
+sftp.password=
+sftp.local.source=C:\\Users\\faisal.nisar1\\Documents\\FTs
+sftp.local.destination=C:\\Users\\faisal.nisar1\\Documents\\tasnim
+sftp.remote.source=/home/markhaur/tasnim
+sftp.remote.destination=/home/markhaur/sftpfiles
+sftp.schedule=1
